--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,12 @@
 services:
-  - type: web
+  - type: static_site
     name: terra-alta
-    env: static
     buildCommand: npm install && npm run build
     staticPublishPath: ./dist
-    redirects:
-      - source: /*
-        destination: /index.html
-        status: 200
+    headers:
+      - path: /*
+        name: X-Robots-Tag
+        value: index, follow
+      - path: /*
+        name: Cache-Control
+        value: public, max-age=3600
