--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,11 @@
 services:
-  - type: static_site
+  - type: web
     name: terra-alta
+    env: static
     buildCommand: npm install && npm run build
     staticPublishPath: ./dist
-    headers:
-      - path: /*
-        name: X-Robots-Tag
-        value: index, follow
-      - path: /*
-        name: Cache-Control
-        value: public, max-age=3600
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html
+        statusCode: 200
